crates/rsi-common/tests/snapshots/rpc_snapshots__snap_get_model_control_status_request.snap
---
source: crates/rsi-common/tests/rpc_snapshots.rs
assertion_line: 317
expression: request
---
{
  "jsonrpc": "2.0",
  "id": 1,
  "method": "GetModelControlStatus",
  "params": {
    "recent_limit": 12
  }
}
