crates/rsi-common/tests/snapshots/rpc_snapshots__snap_get_session_response_with_context_budget_provenance.snap
---
source: crates/rsi-common/tests/rpc_snapshots.rs
expression: response
---
{
  "jsonrpc": "2.0",
  "id": 1,
  "result": {
    "active_task": null,
    "agent_role": null,
    "approval_wait_ms": 0,
    "cache_creation_1h_tokens": null,
    "cache_creation_5m_tokens": null,
    "capability_class": null,
    "claude_session_id": "sess_abc",
    "clippy_passed": null,
    "context_fill_pct": null,
    "context_usage_confidence": "Counted",
    "context_window": 200000,
    "continued_from": null,
    "cost_usd": 0.0123,
    "created_at": "2026-01-01T00:00:00Z",
    "daemon_input_tokens": null,
    "daemon_output_tokens": null,
    "description": null,
    "duration_ms": 5000,
    "effort": null,
    "epic_spawn_ordinal": null,
    "git_branch": "main",
    "group_id": null,
    "handoff_filepath": null,
    "harness_version_hash": null,
    "id": "00000000-0000-0000-0000-000000000001",
    "input_tokens": 1000,
    "is_eval": false,
    "issue_identifier": null,
    "issue_tracker_id": null,
    "issue_url": null,
    "lead_session_id": null,
    "max_retries": null,
    "model": "claude-sonnet-5",
    "num_turns": 3,
    "output_tokens": 500,
    "parent_id": null,
    "pending_archive": false,
    "pending_question": null,
    "permission_denial_count": null,
    "pinned_at": null,
    "pipeline_artifact": null,
    "project_id": "00000000-0000-0000-0000-000000000002",
    "provider": "Claude",
    "provider_capabilities": [],
    "provider_cli_version": null,
    "query": "fix the regression",
    "queued_turn_count": null,
    "rating": null,
    "resolved_context_budget": {
      "active_tokens": 200000,
      "capacity": {
        "advertised_max_tokens": 1050000,
        "compaction_limit_tokens": 180000,
        "configured_tokens": null,
        "effective_percent": 95,
        "max_output_tokens": 128000,
        "provider_default_tokens": 272000,
        "provider_max_tokens": 872000,
        "runtime_effective_tokens": 200000
      },
      "evidence": {
        "confidence": "authoritative",
        "observed_at": "2026-01-01T00:00:00Z",
        "source": "runtime_telemetry",
        "source_digest": "sha256:dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd",
        "source_version": "codex-cli 0.155.1"
      }
    },
    "retry_attempt": null,
    "retry_count": 0,
    "rotation_depth": 0,
    "rotation_disabled_at": null,
    "sandbox_branch": null,
    "sandbox_cleanup_state": null,
    "sandbox_kind": null,
    "sandbox_root": null,
    "scheduled_job_id": null,
    "service_tier": null,
    "session_kind": "Standard",
    "short_summary": null,
    "status": "Running",
    "stop_reason": null,
    "subagent_stats_json": null,
    "tag": "",
    "tags": [],
    "terminal_reason": null,
    "test_passed": null,
    "testing_needed_at": null,
    "thinking_tokens": null,
    "title": "Fix regression",
    "topology_iteration": 0,
    "topology_node_id": null,
    "total_cache_creation_tokens": 0,
    "total_cache_read_tokens": 0,
    "total_input_tokens": 2000,
    "total_output_tokens": 900,
    "total_prompt_tokens": null,
    "turn_count": 3,
    "updated_at": "2026-01-01T00:00:00Z",
    "work_time_ms": 120000,
    "workflow_id": null,
    "workflow_id_override": null,
    "working_dir": "/tmp/repo"
  }
}
