crates/rsi-common/tests/snapshots/rpc_snapshots__snap_get_usage_stats_request.snap
---
source: crates/rsi-common/tests/rpc_snapshots.rs
expression: request
---
{
  "jsonrpc": "2.0",
  "id": 1,
  "method": "GetUsageStats",
  "params": {
    "project_id": "00000000-0000-0000-0000-000000000002"
  }
}
